# ethos-demo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
scripts/: deploy.py
src/ethos_demo/: __init__.py  __main__.py  app.py  backend.py  client.py  config.py  data.py  estimator.py  explainer.py  scenarios.py  summarizer.py  utils.py
src/ethos_demo/client/: __init__.py  admin.py  chat.py  completions.py
src/ethos_demo/data/: __init__.py  datasets.py  demographics.py  quantiles.py  tokens.py
src/ethos_demo/prompts/: ehr_summary.yaml  outcome_explanation.yaml  past_history.yaml  trajectory_summary.yaml
src/ethos_demo/scenarios/: __init__.py  config.py  history.py
src/ethos_demo/ui/: __init__.py  components.py  styles.py
